--- a/index.html
+++ b/index.html
@@ -1,5 +1,14 @@
+<!DOCTYPE html>
 <html>
 
+<head>
+  <link rel="stylesheet" href="style.css">
+</head>
+
+<body>
+
 <p>Hallo, kennen Sie schon nervenwrackFM? https://soundcloud.com/nervenwrackfm</p>
+
+</body>
 
 </html>
